--- a/Eventos y formularios/src/ejercicio4.html
+++ b/Eventos y formularios/src/ejercicio4.html
@@ -19,8 +19,8 @@
         <input type="checkbox" name="franjaHoraria" id=""> 20:00 a 1:00 <br>
 
         <label for="Prepago">Es prepago:</label> <br>
-        <input type="radiobutton" name="Prepago"> Si
-        <input type="radiobutton" name="Contrato"> No
+        <input type="radio" name="Prepago"> Si
+        <input type="radio" name="Contrato"> No
         <br>
         <label for="compania">Selecciona tu compañía telefónica:</label>
         <select id="compania" name="compania">
