--- a/2.Formulario-responsive/index.html
+++ b/2.Formulario-responsive/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Menú Hamburguesa</title>
 </head>
 
 <body>
     <header>
         <div class="header-container">
 
-
-
+            <input type="checkbox" id="menu-checkbox">
+            <label for="menu-checkbox" class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
 
 
             <ul class="nav-menu">
@@ -24,7 +28,10 @@
             </ul>
         </div>
     </header>
-    <h1>Menú Hamburguesa </h1>
+
+
+    <h1>Menú Hamburguesa</h1>
+
 
 </body>
 
