--- a/3.Formulario-reponsive/index.html
+++ b/3.Formulario-reponsive/index.html
@@ -15,8 +15,10 @@
         <div class="right">
             <div class="social">
                 <a href="#">🐦</a>
+                <li><i class="fa-brands fa-facebook"></i></li>
                 <a href="#">in</a>
                 <a href="#">🐙</a>
+
             </div>
 
             <div class="content">
