--- a/3.Formulario-reponsive/index.html
+++ b/3.Formulario-reponsive/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <title>Document</title>
 </head>
 
@@ -14,10 +16,9 @@
 
         <div class="right">
             <div class="social">
-                <a href="#">🐦</a>
-                <li><i class="fa-brands fa-facebook"></i></li>
-                <a href="#">in</a>
-                <a href="#">🐙</a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
 
             </div>
 
